make sure the label doesn'tmake the table jump, add paused class

--- a/style/banshee.css
+++ b/style/banshee.css
@@ -157,3 +157,11 @@ td.playing {
 tr.nowplaying td.playing {
 	background: url('../images/nowplaying.png') no-repeat center;
 }
+
+tr.paused td.playing {
+	background: url('../images/nowplaying.png') no-repeat center;
+}
+
+#nowplaying_label {
+	height: 1em; /* make sure it doesn't need to reflow when it gets content */
+}
